--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     },
     "autoload": {
         "psr-0": {
-            "App": "src/"
+            "App": "src/",
+            "Lib": "src/"
         }
     }
 }
